<resources>
    <string name="app_name">Vehicles Sharing</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Mật khẩu</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="sex">Giới tính</string>
    <string name="phonenumber">Số điện thoại</string>
    <string name="birthday">Ngày sinh</string>
    <string name="rate">Đánh giá</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="update_profile">Lưu thay đổi</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="comfirm_password">Nhập lại mật khẩu</string>
    <string name="add_request">Đăng ký</string>
    <string name="send_request">Gửi</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="edit_profile">Thông tin cá nhân</string>
    <string name="change_password">Change Password</string>
    <string name="address">Address</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Quên mật khẩu</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Chưa có tài khoản? Đăng ký</string>
    <string name="fullName">Họ tên</string>
    <string name="mobileNumber">Số điện thoại</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Nhập lại mật khẩu</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">Đăng ký</string>
    <string name="already_user">Đã có tài khoản. Đăng nhập</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="facebook_app_id">185601375342600</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="default_web_client_id1">1093380309543-o85979qbsnp54ppfi91m1pdaceb4p86o.apps.googleusercontent.com</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="dialog_find_vehicle">Bạn không có xe và có nhu cầu tìm 1 xe để đi nhờ. Để tìm được xe dễ dàng hơn, vui lòng điền đầy đủ thông tin bên dưới</string>
    <string name="dialog_find_people">Bạn có xe và muốn tìm người đi chung. Để tìm được người đi chung dễ dàng hơn, vui lòng điền đầy đủ thông tin bên dưới</string>
    <string name="user_exists">Số điện thoại đã tồn tại</string>
    <string name="no_internet">Lỗi kết nối mạng vui lòng kiểm tra kết nối</string>
    <string name="add_request_fail">Đăng ký không thành công, vui lòng thử lại</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="here">Bạn đang ở đây</string>

    <string name="my_source"></string>
    <string name="title_send_request">Bạn có chắc muốn gửi yêu cầu?</string>
    <string name="title_cancel_trip">Bạn có chắc muốn hủy chuyến đi?</string>
    <string name="confirm_send_request">Bạn chỉ được gửi thông báo đến 1 người, sau khi nhận lại yêu cầu đồng ý chuyến đi của hai bạn sẽ bắt đầu. Nếu bạn bị từ chối bạn mới có thể gửi tiếp 1 yêu cầu khác</string>
    <string name="history">Lịch sử các chuyến đi của bạn</string>
    <string name="rating_another_user">Đánh giá người đi cùng</string>
    <string name="write_comment_rating">Viết bình luận...</string>
    <string name="reason_cancel_trip">Lí do bạn hủy chuyến đi là gì?</string>

    <string name="api_key">AIzaSyDhyyqjvSnOqSm6Aq_vkjCvJeR4BI8gTvc</string>
    <string-array name="sexs_array">
        <item>Male</item>
        <item>Female</item>
        <item>Middle</item>
    </string-array>

    <string-array name="country_array">
        <item></item>
        <item>Vietnam</item>
        <item>Laos</item>
    </string-array>
    <string-array name="province_array">
        <item></item>
        <item>TP HCM</item>
        <item>Hanoi</item>
    </string-array>
    <string-array name="district_array">
        <item></item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="vehicle_type">
        <item>Car</item>
        <item>Bike</item>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="wait_accept">Đã gửi yêu cầu muốn đi chung thành công, bạn vui lòng đợi phản hồi từ người nhận</string>
    <string name="add_request_title">Tạo yêu cầu</string>
    <string name="confirm_request">Thông tin người gửi yêu cầu đi chung đến bạn</string>

    <string name="accept">Chấp nhận</string>
    <string name="deny">Từ chối</string>
    <string name="request_be_accept">Yêu cầu bạn gửi đi đã được chấp nhận. Bạn hãy đến đúng giờ nhé</string>
    <string name="request_accept_send_success">Đã thông báo cho người gửi bạn đã chấp nhận đi chung. Hãy đến đúng giờ nhé</string>
    <string name="request_accept_send_failure">Thông báo được gửi đi thất bại vui lòng thử lại</string>
    <string name="request_deny_send_request">Đã thông báo cho người gửi bạn đã từ chối đi chuyến đi này.</string>
    <string name="user_together">Yêu cầu của bạn đã được chấp nhận. Dưới đây là thông tin người đi chung với bạn</string>
    <string name="title_activity_vehicles_move">Map</string>
    <string name="btn_send_request">Gửi yêu cầu đến người này</string>
    <string name="see_direct">Xem đường đi</string>

    <!--Navigation menu item title-->
    <string name="nav_home">Trang chủ</string>
    <string name="nav_profile">Thông tin cá nhân</string>
    <string name="nav_history">Lịch sử</string>
    <string name="nav_help">Trợ giúp</string>
    <string name="nav_logout">Đăng xuất</string>

    <string name="my_rating">Đánh giá của bạn</string>
    <string name="your_rating">Đánh giá của người đi chung</string>
    <string name="no_history">Chưa có chuyến đi nào</string>
    <string name="no_rating">Chưa có đánh giá</string>
    <string name="no_request">Yêu cầu của bạn đã vượt qua thời gian bắt đầu đã lâu. Vui lòng tạo yêu cầu khác</string>
    <string name="user_info">Trang cá nhân</string>
    <string name="cancel_trip_yes">Hủy chuyến đi</string>

    <string name="sinch_app_key">e212d8cf-ff2a-46d5-88a9-9bf52ff42be5</string>
    <string name="sinch_app_secret">b5c1aay+2k2Q0+QVmMfH5A==</string>
    <string name="sinch_host_name">clientapi.sinch.com</string>

    <string name="update_avatar_fail">Cập nhật ảnh đại diện thất bại</string>
    <string name="update_avatar_success">Cập nhật ảnh đại diện thành công</string>
    <string name="update_info_success">Cập nhật thông tin thành công</string>
    <string name="update_info_fail">Cập nhật thông tin thất bại vui lòng thử lại</string>
</resources>
