<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp">
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPhone"
            style="@style/AppTheme.EditTextBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_mail_outline_white_24dp"
            android:hint="@string/phonenumber"
            android:inputType="phone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/txtPassword"
            style="@style/AppTheme.EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:hint="@string/passowrd"
            android:inputType="textPassword" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white_greyish" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/newUser"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

</RelativeLayout>