<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signUp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtFullName"
        style="@style/AppTheme.EditTextBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:padding="10dp" />

    <EditText
        android:id="@+id/txtPhone"
        style="@style/AppTheme.EditTextBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_call_white_24dp"
        android:hint="@string/mobileNumber"
        android:inputType="phone" />

    <EditText
        android:id="@+id/txtPassword"
        style="@style/AppTheme.EditTextBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
        android:hint="@string/passowrd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        style="@style/AppTheme.EditTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_repeat_white_24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword" />

    <RadioGroup
        android:id="@+id/rdSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdMale"
            style="@style/AppTheme.EditTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="Nam"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rdFemale"
            style="@style/AppTheme.EditTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Nữ"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center|bottom"
        android:padding="10dp"
        android:text="@string/already_user"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

</LinearLayout>