<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/temp"
                    app:civ_border_color="#95a5a6" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="7dp"
                    android:layout_marginRight="7dp"
                    android:src="@drawable/ic_photo_camera_orange_700_24dp"
                    app:civ_border_color="#95a5a6"
                    app:civ_border_width="1dp"
                    app:civ_fill_color="@color/white" />
            </FrameLayout>

            <ProgressBar
                android:id="@+id/loading_progress_img"
                style="?android:attr/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="visible" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/ic_contact_phone_orange_700_24dp" />

                <EditText
                    android:id="@+id/ed_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:paddingBottom="@dimen/margin_edit_profile"
                    android:paddingRight="@dimen/margin_5_dp"
                    android:paddingTop="@dimen/margin_edit_profile" />
            </LinearLayout>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                    android:id="@+id/rd_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:focusable="false"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rd_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:focusable="false"
                    android:text="@string/female" />
                </RadioGroup>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_4_dp"
                android:layout_marginRight="@dimen/margin_5_dp"
                android:background="@color/color_line_field" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/birthday_cake"
                    android:tint="@color/edit_profile_icon" />

                <TextView
                    android:id="@+id/txt_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/margin_edit_profile"
                    android:paddingRight="@dimen/margin_5_dp"
                    android:paddingTop="@dimen/margin_edit_profile"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_4_dp"
                android:layout_marginRight="@dimen/margin_5_dp"
                android:background="@color/color_line_field" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/ic_home_blue_grey_600_24dp"
                    android:tint="@color/edit_profile_icon" />

                <EditText
                    android:id="@+id/ed_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:paddingBottom="@dimen/margin_edit_profile"
                    android:paddingRight="@dimen/margin_5_dp"
                    android:paddingTop="@dimen/margin_edit_profile" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:alpha="1"
        android:background="@drawable/custom_button_save_info"
        android:text="@string/update_profile"
        android:textColor="@color/white"
        android:visibility="visible" />

</LinearLayout>
